
install_data(
    'icons.gresource.xml',
    install_dir: join_paths('share', 'glib-2.0', 'schemas'))
    
install_data(
    'org.enso.launchy.gschema.xml',
    install_dir: join_paths('share', 'glib-2.0', 'schemas'))

install_data('launchy.desktop',
    install_dir : join_paths('share', 'applications'))

install_data(
    'panther-applications.menu',
    install_dir: join_paths(get_option('sysconfdir'), 'xdg', 'menus')
)